# VillageSimulation

./: CMakeLists.txt
src/: main.cpp
src/controller/: SimulationController.cpp  SimulationController.hpp
src/model/: Entity.hpp  Ressource.cpp  Ressource.hpp  villager.cpp  villager.hpp  world.cpp  world.hpp
src/view/: Renderer.cpp  Renderer.hpp  StatPanel.cpp  StatsPanel.hpp
